feat: Fase 1 Admin Reclamos (HU-03 y HU-21)
